--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: OptionControlConsole
   datasource:
-    url: jdbc:postgresql://localhost:5437/option_helper
+    url: jdbc:postgresql://localhost:5437/option_helper?currentSchema=option
     username: postgres
     password: pass7
     driver-class-name: org.postgresql.Driver
@@ -23,7 +23,3 @@ server:
   port: 8585
   context-path: /robot
   address: 0.0.0.0
-
-vaadin:
-  productionMode: true
-  compatibilityMode: false
