--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: OptionControlConsole
   datasource:
-    url: jdbc:postgresql://localhost:5437/option_helper?currentSchema=option
-    username: postgres
-    password: pass7
+    url: jdbc:postgresql://localhost:5430/psql_db?currentSchema=option
+    username: puser
+    password: money7
     driver-class-name: org.postgresql.Driver
     hikari:
       idle-timeout: 300000
