--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -5,6 +5,18 @@ on:
     branches: [ "main", "develop" ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: set up Java and Maven
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          cache: maven
+      - name: run tests
+        run: mvn test
   prepare-environment:
     runs-on: self-hosted
     needs: test
