--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Stop and remove containers, networks
-        run: docker compose down
+        run: docker stop option
+             docker rm option
       - name: Remove unused data
         run: docker system prune -a
   deploy:
