--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -10,12 +10,13 @@ jobs:
     steps:
       - name: Stop container
         run: docker stop option || true
-      - name: remove container 
+      - name: remove container
         run:  docker rm option || true
       - name: Remove unused data
         run: docker system prune -a
   build:
     runs-on: ubuntu-latest
+    needs: prepare-environment
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -27,3 +28,17 @@ jobs:
           cache: maven
       - name: Build and Test
         run:  mvn clean install -DskipTests=true
+      - name: Build Docker Image
+        run:
+            docker build -t yourusername/myapp:${{ github.sha }} .
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+           username: ${{ secrets.DOCKER_USERNAME }}  # Docker Hub username
+           password: ${{ secrets.DOCKER_PASSWORD }}  # Docker Hub password
+
+      - name: Push to Docker Hub
+        run: |
+             docker tag frank/optionconsole:${{ github.sha }} frank/optionconsole:latest
+             docker push frank/optionconsole:latest          
