--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -30,7 +30,7 @@ jobs:
         run:  mvn clean install -DskipTests=true
       - name: Build Docker Image
         run:
-            docker build -t yourusername/myapp:${{ github.sha }} .
+            docker build -t frank/optionconsole:${{ github.sha }} .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
