--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -30,7 +30,7 @@ jobs:
         run:  mvn clean install -DskipTests=true
       - name: Build Docker Image
         run:
-            docker build -t frank/optionconsole:${{ github.sha }} .
+            docker build -t userdocker13/optionconsole:${{ github.sha }} .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -40,5 +40,5 @@ jobs:
 
       - name: Push to Docker Hub
         run: |
-             docker tag frank/optionconsole:${{ github.sha }} frank/optionconsole:latest
-             docker push frank/optionconsole:latest          
+             docker tag userdocker13/optionconsole:${{ github.sha }} userdocker13/optionconsole:latest
+             docker push userdocker13/optionconsole:latest          
