--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'oracle'
+          distribution: 'temurin'
           cache: maven
       - name: Build and Test
         run:  mvn clean package -DskipTests=true
