--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Stop container
         run: docker stop option || true
       - name: remove container
-        run:  docker rm option || true
+        run: docker rm option || true
       - name: Remove unused data
         run: docker system prune -a
   build:
@@ -27,19 +27,30 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and Test
-        run:  mvn clean package -DskipTests=true
+        run: mvn clean package -DskipTests=true
       - name: Build Docker Image
         run:
-            docker build -t userdocker13/optionconsole:${{ github.sha }} --platform linux/arm64 .
+          docker build -t userdocker13/optionconsole:${{ github.sha }} --platform linux/arm64 .
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Dashboard to Docker Hub
+        uses: docker/login-action@v2
         with:
-           username: ${{ secrets.DOCKER_USERNAME }}  # Docker Hub username
-           password: ${{ secrets.DOCKER_PASSWORD }}  # Docker Hub password
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push to Docker Hub
-        run: |
-             docker tag userdocker13/optionconsole:${{ github.sha }} userdocker13/optionconsole:latest
-             docker push userdocker13/optionconsole:latest
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile-app
+          push: true
+          tags: userdocker13/optionconsole:${{ github.sha }} userdocker13/optionconsole:latest
+
+
         
