--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -28,9 +28,6 @@ jobs:
           cache: maven
       - name: Build and Test
         run: mvn clean package -DskipTests=true
-      - name: Build Docker Image
-        run:
-          docker build -t userdocker13/optionconsole:${{ github.sha }} --platform linux/arm64 .
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -41,8 +38,8 @@ jobs:
       - name: Dashboard to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
