--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -29,9 +29,6 @@ jobs:
       - name: Build and Test
         run: mvn clean package -DskipTests=true
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -46,6 +43,7 @@ jobs:
         with:
           context: .
           file: Dockerfile
+          platform: linux/arm64
           push: true
           tags: userdocker13/optionconsole:latest
 
