--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           context: .
           file: Dockerfile
-          platform: linux/arm64
+          platforms: linux/arm64
           push: true
           tags: userdocker13/optionconsole:latest
 
