--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -13,7 +13,7 @@ jobs:
       - name: remove container
         run: docker rm option || true
       - name: Remove unused data
-        run: docker system prune -a
+        run: docker system prune -a --force
   build:
     runs-on: ubuntu-latest
     needs: prepare-environment
