--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -5,18 +5,8 @@ on:
     branches: [ "main", "develop" ]
 
 jobs:
-  prepare-environment:
-    runs-on: self-hosted
-    steps:
-      - name: Stop container
-        run: docker stop option || true
-      - name: remove container
-        run: docker rm option || true
-      - name: Remove unused data
-        run: docker system prune -a --force
   build:
     runs-on: ubuntu-latest
-    needs: prepare-environment
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -26,8 +16,8 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-      - name: Build and Test
-        run: mvn clean package -DskipTests
+      - name: Build
+        run: mvn clean install -DskipTests
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
