#Новая версия сборки

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <imageName>userdocker13/optionconsole</imageName>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
