--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Build
         run: mvn clean install -DskipTests
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Build Docker Image
+        uses: mvn spring-boot:build-image
 
       - name: Dashboard to Docker Hub
         uses: docker/login-action@v2
