--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -21,7 +21,7 @@ jobs:
         run: mvn clean install --file pom.xml -Dmaven.test.skip
 
       - name: Build Docker Image
-        uses: mvn spring-boot:build-image
+        run: mvn spring-boot:build-image
 
       - name: Dashboard to Docker Hub
         uses: docker/login-action@v2
